--- a/bc-player-dash.html
+++ b/bc-player-dash.html
@@ -7,19 +7,19 @@ layout: default
 <form id="playform">
   <div class="form-group">
     <label for="manifest">MPEG DASH Manifest:</label>
-    <input type="text" class="form-control" id="manifest" name="manifest">
+    <input type="text" class="form-control" id="manifest" name="manifest" data-manifest-target data-persist="dash-manifest">
   </div>
   <div class="form-group">
     <label for="widevine-url">Widevine License URL: (Optional)</label>
-    <input type="text" class="form-control" id="widevine-url" name="manifest">
+    <input type="text" class="form-control" id="widevine-url" name="manifest" data-persist="dash-widevine">
   </div>
   <div class="form-group">
     <label for="bcov-auth">BCOV Auth JWT: (Optional)</label>
-    <input type="text" class="form-control" id="bcov-auth" name="manifest">
+    <input type="text" class="form-control" id="bcov-auth" name="manifest" data-persist="dash-bcov-jwt">
     <div id="bcov-auth-alert" role="alert" hidden></div>
   </div>
   <button type="submit" class="btn btn-primary btn-lg">Play!</button><br><br>
-  <button type="button" id="demo" class="btn btn-info btn-sm">Load Demo Manifest</button>
+  {% include examples.html kind="dash" %}
 </form>
 </section>
 
@@ -75,53 +75,29 @@ const customGetLicense = (keySystemOptions) => (emeOptions, keyMessage, callback
   });
 };
 
-const play = () => {
-  var player = videojs('example');
-  const auth_alert = document.getElementById('bcov-auth-alert'),
-      manifest_url = document.getElementById('manifest').value,
-      bcov_auth = document.getElementById('bcov-auth').value,
-      widevine_url = document.getElementById('widevine-url').value;
-  localStorage.setItem('manifest',manifest_url);
-  localStorage.setItem('widevine_url',widevine_url);
-  localStorage.setItem('bcov_auth',bcov_auth);
-  auth_alert.hidden = !bcov_auth
+const player       = videojs('example'),
+      auth_alert   = document.getElementById('bcov-auth-alert'),
+      manifest     = document.getElementById('manifest'),
+      widevine_url = document.getElementById('widevine-url'),
+      bcov_auth    = document.getElementById('bcov-auth');
+
+document.getElementById('playform').onsubmit = () => {
+  auth_alert.hidden = !bcov_auth.value;
   if (!auth_alert.hidden) {
     auth_alert.className = 'alert';
     auth_alert.innerHTML = '.....';
   }
+  persistAll();
   player.src({
-    src: manifest_url,
+    src: manifest.value,
     type: 'application/dash+xml',
     dashPreprocessing: true,
-    emeHeaders: { 'BCOV-Auth': bcov_auth },
+    emeHeaders: { 'BCOV-Auth': bcov_auth.value },
     keySystems: {
-      'com.widevine.alpha': { getLicense: customGetLicense({ url: widevine_url }) },
+      'com.widevine.alpha': { getLicense: customGetLicense({ url: widevine_url.value }) },
     }
   });
   player.play();
+  return false;
 }
-
-window.onload = () => {
-  const manifest     = document.getElementById('manifest'),
-        widevine_url = document.getElementById('widevine-url'),
-        bcov_auth = document.getElementById('bcov-auth');
-
-  if (!!localStorage.getItem('manifest')) {
-    manifest.value = localStorage.getItem('manifest');
-  }
-  if (!!localStorage.getItem('widevine_url')) {
-    widevine_url.value = localStorage.getItem('widevine_url');
-  }
-  if (!!localStorage.getItem('bcov_auth')) {
-    bcov_auth.value = localStorage.getItem('bcov_auth')
-  }
-  document.getElementById('playform').onsubmit = () => {
-    play();
-    return false;
-  }
-  document.getElementById('demo').onclick = () => {
-    manifest.value = 'http://rdmedia.bbc.co.uk/dash/ondemand/testcard/1/client_manifest-events.mpd';
-    play();
-  };
-};
 </script>
