--- a/shaka.html
+++ b/shaka.html
@@ -8,20 +8,19 @@ layout: default
 <script src="https://cdnjs.cloudflare.com/ajax/libs/shaka-player/2.1.0/shaka-player.compiled.debug.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/shaka-player/2.1.0/shaka-player.compiled.externs.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/shaka-player/2.1.0/shaka-player.compiled.js"></script>
-<script src="js/app-shaka.js"></script>
 
 <section class="bootstrap-iso">
   <form id="playform">
     <div class="form-group">
       <label for="manifest">DASH Manifest:</label>
-      <input type="text" class="form-control" id="manifest" name="manifest">
+      <input type="text" class="form-control" id="manifest" name="manifest" data-manifest-target data-persist="dash-manifest">
     </div>
     <div class="form-group">
       <label for="widevine-url">Widevine License URL: (Optional)</label>
-      <input type="text" class="form-control" id="widevine-url" name="manifest">
+      <input type="text" class="form-control" id="widevine-url" name="manifest" data-persist="dash-widevine">
     </div>
     <button type="submit" class="btn btn-primary btn-lg">Play!</button><br><br>
-    <button type="button" id="demo" class="btn btn-info btn-sm">Load Demo Manifest</button>
+    {% include examples.html kind="dash" %}
   </form>
 </section>
 
@@ -60,9 +59,10 @@ layout: default
   });
 
   const widevine = document.getElementById('widevine-url'),
-    manifest = document.getElementById('manifest');
+        manifest = document.getElementById('manifest');
 
-  function play() {
+  document.getElementById('playform').onsubmit = () => {
+    persistAll();
     if (widevine.value !== '') {
       player.configure({ drm: {
         servers: { 'com.widevine.alpha': widevine.value },
@@ -75,13 +75,5 @@ layout: default
       console.log('The video has now been loaded!');
     }).catch(onError);  // onError is executed if the asynchronous load fails.
     return false;
-  }
-  document.getElementById('playform').onsubmit = () => {
-    play();
-    return false
-  };
-  document.getElementById('demo').onclick = () => {
-    manifest.value = 'http://rdmedia.bbc.co.uk/dash/ondemand/testcard/1/client_manifest-events.mpd'
-    play();
   };
 </script>
