--- a/videojs-contrib-hls.html
+++ b/videojs-contrib-hls.html
@@ -13,14 +13,10 @@ layout: default
   <form id="playform">
     <div class="form-group">
       <label for="manifest">HLS Manifest:</label>
-      <input type="text" class="form-control" id="manifest" name="manifest">
+      <input type="text" class="form-control" id="manifest" name="manifest" data-manifest-target data-persist="hls-manifest">
     </div>
-    <!-- <div class="form-group">
-      <label for="vtt-metadata">VTT Metadata:</label>
-      <input type="text" class="form-control" id="vtt-metadata" name="vtt-metadata">
-    </div> -->
     <button type="submit" class="btn btn-primary btn-lg">Play!</button><br><br>
-    <button type="button" id="demo" class="btn btn-info btn-sm">Load Demo Manifest</button>
+    {% include examples.html kind="hls" %}
   </form>
 </section>
 
@@ -38,20 +34,13 @@ layout: default
 const player = videojs('example')
   manifest = document.getElementById('manifest'),
   license = document.getElementById('license');
-function play() {
+document.getElementById('playform').onsubmit = () => {
+  persistAll();
   player.src({
     src: manifest.value,
     type: 'application/x-mpegURL'
   });
   player.play();
-}
-document.getElementById('playform').onsubmit = () => {
-  play();
   return false;
 }
-
-document.getElementById('demo').onclick = () => {
-  manifest.value = 'https://s3.amazonaws.com/_bc_dml/example-content/tears-of-steel/playlist.m3u8';
-  play();
-};
 </script>
